Project

General

Profile

Actions

Bug #53267

closed

seastore crash during perf test after about 1 hour of running

Added by Xuehan Xu over 2 years ago. Updated almost 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

INFO 2021-11-15 18:48:47,717 [shard 0] seastore - mark open: [0,1089], empty_segments 510
INFO 2021-11-15 18:48:47,781 [shard 0] osd - found existing watch by client.4137
ERROR 2021-11-15 18:48:47,781 [shard 0] ms - ms_dispatch unhandled message ping magic: 0 v1
INFO 2021-11-15 18:48:50,253 [shard 0] seastore - mark empty: [0,745], empty_segments 511
INFO 2021-11-15 18:48:50,533 [shard 0] osd - asok response length: 4441
INFO 2021-11-15 18:48:50,541 [shard 0] osd - asok response length: 80532
INFO 2021-11-15 18:48:51,424 [shard 0] seastore - mark open: [0,745], empty_segments 510
INFO 2021-11-15 18:48:52,783 [shard 0] osd - found existing watch by client.4137
ERROR 2021-11-15 18:48:52,783 [shard 0] ms - ms_dispatch unhandled message ping magic: 0 v1
INFO 2021-11-15 18:48:54,840 [shard 0] seastore - mark open: [0,1090], empty_segments 509
Segmentation fault on shard 0.
Backtrace:
0# crimson::os::seastore::TransactionManager::rewrite_logical_extent(crimson::os::seastore::Transaction&, boost::intrusive_ptr<crimson::os::seastore::LogicalCachedExtent>) in /home/xuxuehan/src/ceph/build/bin/crimson-osd
1# crimson::os::seastore::TransactionManager::rewrite_extent(crimson::os::seastore::Transaction&, boost::intrusive_ptr<crimson::os::seastore::CachedExtent>) in /home/xuxuehan/src/ceph/build/bin/crimson-osd
2# 0x0000000001B5052D in /home/xuxuehan/src/ceph/build/bin/crimson-osd
3# 0x0000000001B50DC9 in /home/xuxuehan/src/ceph/build/bin/crimson-osd
4# 0x0000000001E78A4E in /home/xuxuehan/src/ceph/build/bin/crimson-osd
5# 0x0000000001E78DC2 in /home/xuxuehan/src/ceph/build/bin/crimson-osd
6# 0x0000000001EA2F46 in /home/xuxuehan/src/ceph/build/bin/crimson-osd
7# 0x0000000001EA3AE9 in /home/xuxuehan/src/ceph/build/bin/crimson-osd
8# 0x0000000001E38F85 in /home/xuxuehan/src/ceph/build/bin/crimson-osd
9# 0x0000000001E39C21 in /home/xuxuehan/src/ceph/build/bin/crimson-osd
10# main in /home/xuxuehan/src/ceph/build/bin/crimson-osd
11# __libc_start_main in /lib64/libc.so.6
12# _start in /home/xuxuehan/src/ceph/build/bin/crimson-osd

Actions #1

Updated by Xuehan Xu over 2 years ago

  • Assignee set to Xuehan Xu
Actions #2

Updated by Xuehan Xu almost 2 years ago

  • Status changed from New to Resolved
Actions

Also available in: Atom PDF