crimson/os/seastore: wait for logical cached extents' pin to be set if it's found in cache

There are circumstances in which a transaction tries to load an extent from disk, and before
the extent's pin is set and after it is read from disk, another transaction finds it in cache.
If this is the case, the latter transaction would continue with an extent whose pin is empty,
which is problematic

Fixes: https://tracker.ceph.com/issues/53267
Signed-off-by: Xuehan Xu <xxhdx1985126@gmail.com>